# k24-default-bitstreams

./: .gitignore  README.md
k24-default-bitstreams/: CMakeLists.txt  main.cpp
snap/: snapcraft.yaml
snap/hooks/: connect-plug-fpgad-dbus  disconnect-plug-fpgad-dbus
